# Prediccion-Ola-De-Frio

./: README.md
plantilla_cookiecutter/: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
plantilla_cookiecutter/.github/: ISSUE_TEMPLATE.md
plantilla_cookiecutter/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
plantilla_cookiecutter/src/plantilla_cookiecutter/: __init__.py  cli.py
plantilla_cookiecutter/tests/: __init__.py  test_plantilla_cookiecutter.py
