[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plantilla_cookiecutter"
version = "0.1.0"
description = "Un proyecto para predecir olas de frío usando datos meteorológicos"
readme = "README.rst"
authors = [
  {name = "Abigail Iñigo", email = "aby0254@gmail.com"}
]
maintainers = [
  {name = "Abigail Iñigo", email = "aby0254@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/abigaail0/plantilla_cookiecutter/issues"
changelog = "https://github.com/abigaail0/plantilla_cookiecutter/blob/master/changelog.md"
homepage = "https://github.com/abigaail0/plantilla_cookiecutter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

